fix overflow at sidebar

--- a/src/components/Sidebar/DefaultSidebar/DefaultSidebar.module.css
+++ b/src/components/Sidebar/DefaultSidebar/DefaultSidebar.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     min-width: 13.4375rem;
     height: 100vh;
-    overflow: auto;
 }
 
 .body::-webkit-scrollbar {
@@ -14,8 +13,10 @@
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
-    margin-top: 2rem;
+    margin-top: 4rem;
     width: 13.4375rem;
+    padding-right: 5px;
+    overflow-x: auto;
 }
 
 .group {
