--- a/src/components/UI/Separator/Separator.module.css
+++ b/src/components/UI/Separator/Separator.module.css
@@ -1,5 +1,5 @@
 .body {
-    height: 0.0625rem;
+    min-height: 0.0625rem;
     background-color: #09C61C;
     width: 100%;
 }
